--- a/style.css
+++ b/style.css
@@ -33,7 +33,34 @@ header {
 #nav a:hover {  
    background-color: #005533;  
    color: #f0f0f0;  
+}
+#nav_sub {  
+   clear: both;  
+   margin: 0 auto;  
+   padding: 0;  
 } 
+#nav_sub li{    
+   width: 190px;  
+   list-style: none;
+   padding-bottom:2px;  
+} 
+#nav_sub a {  
+   display: block;  
+   padding-top: 16px;  
+   padding-bottom: 16px;  
+   text-align: center;  
+   color:black;
+   font-size: 16px;  
+   font-weight: bold;
+   border-left:solid 15px #003333;  
+   text-decoration:none;
+   background-image:url(./img/a.jpg);
+} 
+#nav_sub a:hover {
+   border-left:solid 15px  red;    
+   text-decoration:none;
+   }
+ 
 #main {
    width: 950px;     
 }
@@ -42,13 +69,20 @@ header {
    width: 190px;     
 }
 #contents {
-   float: left;
-   width: 950px;     
+   float: right;
+   width: 750px;     
    }
+#menu{
+	float:left;
+	padding-left:10px;
+	padding-bottom:15px;
+    padding-top:25px;
+    margin: 0 auto;   
+	width:200;
+	}
 footer {
    clear: both;      
    width: 950px;
-   height: 100px;
    text-align: center;
 }
 #menu ul {
@@ -60,4 +94,29 @@ table {
 }
 td {
 	text-align: center;
+}
+h1 {
+	text-align: center;
+}
+.link_top {
+	text-align: right;
+}
+h4 {
+	text-align: center;
+}
+h3 {
+	text-align:center;
+}
+#volunteer{
+	text-align:center;
+}
+img { 
+	border-style:none; 
+} 
+
+a img {
+	border-style:none; 
+} 
+#center{
+	text-align:center;
 }
