--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
    padding: 0;
    font-family:'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
 }
+body{
+background: #bed2c3;
+}
 #wrapper {
    width: 950px;
    margin: 0 auto;   
@@ -81,11 +84,7 @@ header {
     margin: 0 auto;   
 	width:200;
 	}
-footer {
-   clear: both;      
-   width: 950px;
-   text-align: center;
-}
+
 #menu ul {
    list-style: none;
 }
@@ -120,4 +119,46 @@ a img {
 } 
 #center{
 	text-align:center;
+}
+
+#main .notice{
+width: 425px;
+}
+
+#main .notice h2{
+font-size: 25px;
+padding-left: 20px;
+border-bottom: dotted 2px;
+}
+
+#main .notice ul{
+}
+
+#main .notice ul li{
+list-style: none;
+padding: 5px 0px 0px 20px;
+border-bottom: dotted 1px;
+}
+
+#main .notice ul li a{
+text-decoration: none;
+color: black;
+
+}
+
+#main .notice ul li .time{
+font-size: 10px;
+}
+
+footer {
+   clear: both;      
+   width: 950px;
+   text-align: center;
+   padding-top: 20px;
+}
+
+footer .banner{
+width: 425px;
+height: 90px;
+background: pink;
 }
