山本 EVENTに研修登録システムを移植 表示修正 リンク修正
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@43 a4f8b3a5-e007-e211-b16c-525400821517

--- a/style.css
+++ b/style.css
@@ -74,7 +74,9 @@ header {
 }
 #contents {
    float: right;
-   width: 750px;     
+   width: 725px;
+   padding-bottom:15px;
+   padding-top:25px;
    }
 #menu{
 	float:left;
